--- a/src/app/education/education.component.scss
+++ b/src/app/education/education.component.scss
@@ -1,5 +1,4 @@
-@import "~src/scss/_variables.scss";    
-
+@import "~src/scss/_variables.scss";
 
 section {
   min-height: 100vh;
@@ -10,14 +9,19 @@ section {
     padding-top: 10px;
   }
 }
-li{
+li {
   color: $light-text;
   padding-bottom: 0.4em;
 }
-div{
+div {
   color: $light-text;
 }
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -27,7 +31,8 @@ a {
   transition: all 0.2s ease-in-out;
   color: $light-orange;
 }
-a:hover, a:focus {
+a:hover,
+a:focus {
   text-decoration: none;
   color: $light-text;
 }
@@ -62,7 +67,8 @@ img::-moz-selection {
 }
 
 .shadow-nohover {
-  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 10px 0px rgba(0, 0, 0, 0.12);
   transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -134,7 +140,6 @@ h3 {
   margin-bottom: 40px;
 }
 .experience .item::before {
-
   content: "";
   position: absolute;
   left: -45px;
@@ -146,7 +151,6 @@ h3 {
   border: 2px solid $light-orange;
 }
 .experience .item::after {
-  
   content: "";
   position: absolute;
   left: -37px;
@@ -155,6 +159,10 @@ h3 {
   height: 10px;
   border-radius: 50%;
   background: $light-orange;
+  // -webkit-animation: Animate-HTML 3s;
+  // animation: Animate-HTML 3s;
+  // -webkit-box-sizing: border-box;
+  // box-sizing: border-box;
 }
 .experience .company-name {
   color: $light-orange;
