--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,15 +1,14 @@
-@import "~src/scss/_variables.scss";    
+@import "~src/scss/_variables.scss";
 
-.wrapper{
+.wrapper {
     width: 400px;
-    font-family: 'Roboto', sans-serif;
-margin:0 auto;
+    font-family: "Roboto", sans-serif;
+    margin: 0 auto;
 }
 .skill {
     margin-bottom: 35px;
     position: relative;
-        overflow-x:hidden;
-        
+    overflow-x: hidden;
 }
 .skill > p {
     font-size: 18px;
@@ -17,7 +16,7 @@ margin:0 auto;
     color: #1a1716;
     margin: 0;
 }
-.skill:before{
+.skill:before {
     width: 100%;
     height: 5px;
     content: "";
@@ -29,17 +28,16 @@ margin:0 auto;
 .skill-bar {
     width: 100%;
     height: 5px;
-    background:#f4392f;
+    background: #f4392f;
     display: block;
     position: relative;
 }
 
 /* SKILL 1 */
-.skill1{
+.skill1 {
     width: 95%;
-        
 }
-.skill-bar span{
+.skill-bar span {
     position: absolute;
     border-top: 5px solid #f4392f;
     top: -30px;
@@ -50,14 +48,13 @@ margin:0 auto;
 }
 .skill-bar {
     position: relative;
-        
 }
 
 .skill1 .skill-count1 {
     right: 0;
 }
 /* SKILL 2 */
-.skill2{
+.skill2 {
     width: 85%;
 }
 
@@ -65,7 +62,7 @@ margin:0 auto;
     right: 0;
 }
 /* SKILL 3 */
-.skill3{
+.skill3 {
     width: 75%;
 }
 .skill3 .skill-count3 {
@@ -73,8 +70,8 @@ margin:0 auto;
 }
 
 /* SKILL 4 */
-.skill4{
-    width: 65%
+.skill4 {
+    width: 65%;
 }
 
 .skill4 .skill-count4 {
@@ -82,7 +79,7 @@ margin:0 auto;
 }
 
 /* SKILL 5 */
-.skill5{
+.skill5 {
     width: 80%;
 }
 
@@ -91,24 +88,24 @@ margin:0 auto;
 }
 
 /* SKILL 6 */
-.skill6{
-    width: 90%
+.skill6 {
+    width: 90%;
 }
 
 .skill6 .skill-count6 {
     right: 0;
 }
 /* GITHUB SOURCE STYLE  */
-.github-source{
-float:right;
-display:block;
-color:#fff;
-margin:0 20px;
-position: relative;
-z-index:999999;
-top:0;
+.github-source {
+    float: right;
+    display: block;
+    color: #fff;
+    margin: 0 20px;
+    position: relative;
+    z-index: 999999;
+    top: 0;
 }
-.github-source i{
-font-size:50px;
-color:#000
+.github-source i {
+    font-size: 50px;
+    color: #000;
 }
