--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,5 +1,5 @@
 <app-side-bar></app-side-bar>
-<div class="section">
+<div class="section-skills">
   <div class="section-header">
     <div class="section-title">Skills</div>
     <div class="section-name">Languages</div>
@@ -21,31 +21,31 @@
       [outerStrokeColor]="'#dc9b8a'" [innerStrokeColor]="'#2F4858'" [titleColor]="'#dc9b8a'" [title]="'HTML'"
       [animation]="true" [animationDuration]="1000" [showUnits]="false" [showImage]=true [imageSrc]="'assets/java.png'"
       [imageHeight]=50 [imageWidth]=50></circle-progress>
-
   </div>
 
-  <div class="section-header">
-    <div class="section-title">Skills</div>
-    <div class="section-name">Languages</div>
-  </div>
-  <div class="section-content">
-    <circle-progress [percent]="90" [radius]="50" [outerStrokeWidth]="6" [innerStrokeWidth]="4"
-      [outerStrokeColor]="'#dc9b8a'" [innerStrokeColor]="'#2F4858'" [titleColor]="'#dc9b8a'" [title]="'HTML'"
-      [animation]="true" [animationDuration]="1000" [showUnits]="false" [showImage]=true [imageSrc]="'assets/html.png'"
-      [imageHeight]=30 [imageWidth]=30></circle-progress>
-    <circle-progress [percent]="90" [radius]="50" [outerStrokeWidth]="6" [innerStrokeWidth]="4"
-      [outerStrokeColor]="'#dc9b8a'" [innerStrokeColor]="'#2F4858'" [titleColor]="'#dc9b8a'" [title]="'HTML'"
-      [animation]="true" [animationDuration]="1000" [showUnits]="false" [showImage]=true [imageSrc]="'assets/css.png'"
-      [imageHeight]=50 [imageWidth]=50></circle-progress>
-    <circle-progress [percent]="80" [radius]="50" [outerStrokeWidth]="6" [innerStrokeWidth]="4"
-      [outerStrokeColor]="'#dc9b8a'" [innerStrokeColor]="'#2F4858'" [titleColor]="'#dc9b8a'" [title]="'HTML'"
-      [animation]="true" [animationDuration]="1000" [showUnits]="false" [showImage]=true
-      [imageSrc]="'assets/typescript.png'" [imageHeight]=50 [imageWidth]=50></circle-progress>
-    <circle-progress [percent]="60" [radius]="50" [outerStrokeWidth]="6" [innerStrokeWidth]="4"
-      [outerStrokeColor]="'#dc9b8a'" [innerStrokeColor]="'#2F4858'" [titleColor]="'#dc9b8a'" [title]="'HTML'"
-      [animation]="true" [animationDuration]="1000" [showUnits]="false" [showImage]=true [imageSrc]="'assets/java.png'"
-      [imageHeight]=50 [imageWidth]=50></circle-progress>
 
-  </div>
-
+  <div >
+    <div class="section-header">
+      <div class="section-name">Frameworks</div>
+    </div>
+    <div class="section-content">
+      <circle-progress [percent]="90" [radius]="50" [outerStrokeWidth]="6" [innerStrokeWidth]="4"
+        [outerStrokeColor]="'#dc9b8a'" [innerStrokeColor]="'#2F4858'" [titleColor]="'#dc9b8a'" [title]="'HTML'"
+        [animation]="true" [animationDuration]="1000" [showUnits]="false" [showImage]=true [imageSrc]="'assets/angular.png'"
+        [imageHeight]=30 [imageWidth]=30></circle-progress>
+      <circle-progress [percent]="90" [radius]="50" [outerStrokeWidth]="6" [innerStrokeWidth]="4"
+        [outerStrokeColor]="'#dc9b8a'" [innerStrokeColor]="'#2F4858'" [titleColor]="'#dc9b8a'" [title]="'HTML'"
+        [animation]="true" [animationDuration]="1000" [showUnits]="false" [showImage]=true [imageSrc]="'assets/bootstrap.png'"
+        [imageHeight]=50 [imageWidth]=50></circle-progress>
+      <circle-progress [percent]="80" [radius]="50" [outerStrokeWidth]="6" [innerStrokeWidth]="4"
+        [outerStrokeColor]="'#dc9b8a'" [innerStrokeColor]="'#2F4858'" [titleColor]="'#dc9b8a'" [title]="'HTML'"
+        [animation]="true" [animationDuration]="1000" [showUnits]="false" [showImage]=true
+        [imageSrc]="'assets/typescript.png'" [imageHeight]=50 [imageWidth]=50></circle-progress>
+      <circle-progress [percent]="60" [radius]="50" [outerStrokeWidth]="6" [innerStrokeWidth]="4"
+        [outerStrokeColor]="'#dc9b8a'" [innerStrokeColor]="'#2F4858'" [titleColor]="'#dc9b8a'" [title]="'HTML'"
+        [animation]="true" [animationDuration]="1000" [showUnits]="false" [showImage]=true [imageSrc]="'assets/java.png'"
+        [imageHeight]=50 [imageWidth]=50></circle-progress>
+    </div>
+  </div>  
 </div>
+
