--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -109,3 +109,38 @@
     font-size: 50px;
     color: #000;
 }
+
+.section-skills {
+    background: $background-color 0% 0% no-repeat padding-box;
+    padding-left: 40vh;
+    padding-right: 40vh;
+    overflow: hidden;
+    padding-top: 10vh;
+    height: auto;
+    min-height: 100vh;
+    width: 60%;
+    display: grid;
+    grid-template-rows: 7% 17% auto;
+}
+.section-header{
+    padding-left: 0.5em;
+    padding-bottom: 0.5em;
+    .section-title{
+        font-size: 16px;
+        font-weight: 600;
+        color: $light-orange;
+    }
+    .section-name{
+  
+    }
+    .section-name::after {
+        content: "";
+        display: block;
+        width: 32px;
+        padding-top: 3px;
+        border-bottom: 2px solid $light-orange;
+      }
+  }
+  
+
+  
