--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -13,8 +13,7 @@
     background-color: $background-color;
     box-sizing: border-box;
     padding: 0;
-    margin: 0;
-    font-family: Verdana;
+    margin: 0;[]]
     overflow: auto;
     margin-bottom: 2em;
   }
@@ -34,7 +33,7 @@
   padding-left: 40vh;
   padding-right: 40vh;
   overflow: hidden;
-  padding-top: 10vh;
+  padding-top: 5%;
   height: auto;
   min-height: 100vh;
   width: 60%;
