[add] skills images

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -10,10 +10,10 @@
     <div  class="section-content">
 
             <p class="card intro">
-              Hi There, I'm Vedika Mujgule
+              Hi There, I'm Vedika Mujgule, a Web software Developer!
               <!-- <span class="name">Vedika Mujgule</span><br><br> -->
               
-              I love to design and develop clean and responsive UI layouts and have two years of cumulative work experience as a Software Developer with expertise in Angular framework. Being passionate about web development, layout aesthetics, and great user experience I focus on ingenuity! I roll in with familiarity in API development and integration furthering an in-depth understanding of the entire web development process.
+              I love to design and develop clean and responsive UI layouts and have two years of cumulative work experience with the Angular framework. Being passionate about web development, layout aesthetics, and great user experience I focus on ingenuity! I roll in with familiarity in API development and integration furthering an in-depth understanding of the entire web development process.
 
               <br> <br> I believe that advancements in technology and learning are indefinite. I like to stay updated and learn the latest libraries and integrations managed with the frontend development.
                 
