--- a/src/app/hobbies/hobbies.component.html
+++ b/src/app/hobbies/hobbies.component.html
@@ -1,1 +1,151 @@
 <p>hobbies works!</p>
+<div class="team-products">
+	<div class="product">
+		<div class="product-overlay">
+
+		</div>
+		<div class="content">
+			<img src="https://images.pexels.com/photos/302769/pexels-photo-302769.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" itemprop="image">
+		</div>
+		<div class="content-details">
+			<p class="name">
+				Koc University
+			</p>
+			<div class="desc">
+				Our Mock-Audit helped improving their financial management.
+			</div>
+		</div>
+	</div>
+	<div class="product">
+		<div class="product-overlay">
+
+		</div>
+		<div class="content">
+			<img src="https://images.unsplash.com/photo-1610307766999-01f45d259959?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" itemprop="image">
+		</div>
+		<div class="content-details">
+			<p class="name">
+				Hungarian Academy of Sciences - COURAGE project
+			</p>
+			<div class="desc">
+				We supported the GAP and reporting phases.
+			</div>
+		</div>
+	</div>
+	<div class="product">
+		<div class="product-overlay">
+
+		</div>
+		<div class="content">
+			<img src="https://www.wallpaperuse.com/wallp/57-570065_m.jpg" itemprop="image">
+		</div>
+		<div class="content-details">
+			<p class="name">
+				H-Farm
+			</p>
+			<div class="desc">
+				We helped to align their EU funding strategy.
+			</div>
+		</div>
+	</div>
+	<div class="product">
+		<div class="product-overlay">
+
+		</div>
+		<div class="content">
+			<img src="https://mcdn.wallpapersafari.com/medium/25/56/aPonQ9.jpg" itemprop="image">
+		</div>
+		<div class="content-details">
+			<p class="name">
+				Norwegian Research Council
+			</p>
+			<div class="desc">
+				Our framework contract covers all sorts of services with a focus on in-house training courses.
+			</div>
+		</div>
+	</div>
+	<div class="product">
+		<div class="product-overlay">
+
+		</div>
+		<div class="content">
+			<img src="https://wallpaperforu.com/wp-content/uploads/2021/04/Wallpaper-Empire-State-Building-New-York-City-Sunset-Cit18-1536x960.jpg" itemprop="image">
+		</div>
+		<div class="content-details">
+			<p class="name">
+				OSLOMET
+			</p>
+			<div class="desc">
+				We provided pre-evaluation services with a 14.5 result.
+			</div>
+		</div>
+	</div>
+	<div class="product">
+		<div class="product-overlay">
+
+		</div>
+		<div class="content">
+			<img src="https://cdn.pixabay.com/photo/2020/12/17/12/03/sunset-5839105_960_720.jpg" itemprop="image">
+		</div>
+		<div class="content-details">
+			<p class="name">
+				Prophylix Pharma
+			</p>
+			<div class="desc">
+				We supported the coordinator in every-day management and reporting.
+			</div>
+		</div>
+	</div>
+	<div class="product">
+		<div class="product-overlay">
+
+		</div>
+		<div class="content">
+			<img src="https://images.unsplash.com/photo-1514678740932-c28a2a8d57da?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80" itemprop="image">
+		</div>
+		<div class="content-details">
+			<p class="name">
+				University of Thessaly
+			</p>
+			<div class="desc">
+				Our pre-evaluation services contributed to a winning proposal.
+			</div>
+		</div>
+	</div>
+	<div class="product">
+		<div class="product-overlay">
+
+		</div>
+		<div class="content">
+			<p class="name">
+				Bar-Ilan University
+			</p>
+			<div class="desc">
+				Our cooperation focused on supporting researchers with concept and project development.
+			</div>		</div>
+		<div class="content-details">
+			<p class="name">
+				Bar-Ilan University
+			</p>
+			<div class="desc">
+				Our cooperation focused on supporting researchers with concept and project development.
+			</div>
+		</div>
+	</div>
+	<div class="product">
+		<div class="product-overlay">
+
+		</div>
+		<div class="content">
+			<img src="https://images5.alphacoders.com/888/thumb-1920-888721.jpg" itemprop="image">
+		</div>
+		<div class="content-details">
+			<p class="name">
+				University of Oslo
+			</p>
+			<div class="desc">
+				Our contract focuses on capacity-building, pre-evaluation and management related services.
+			</div>
+		</div>
+	</div>
+</div>
