--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -14,7 +14,7 @@
 
     <ul class="sidenav-inner py-1">
         <li class="sidenav-item sidenav-item">
-            <button class="sidenav-link sidenav-link " [ngClass]="routeUrl === '/about-me' ? 'active': ''" (click)="navigateTo('about me')">
+            <button class="sidenav-link sidenav-link " [ngClass]="routeUrl === '/' ? 'active': ''" (click)="navigateTo('')">
             <span class="sidenav-dsplay"><span class="sidenav-line"></span>
                 <img src="/assets/logo/Scroll Group 3.png" class="sidenav-icon">
                 About Me</span> 
@@ -43,17 +43,17 @@
         </button>
     </li>
     <li class="sidenav-item sidenav-item">
-        <button class="sidenav-link sidenav-link " [ngClass]="routeUrl === '/k' ? 'active': ''" (click)="navigateTo('k')">
+        <button class="sidenav-link sidenav-link " [ngClass]="routeUrl === '/projects' ? 'active': ''" (click)="navigateTo('projects')">
         <span class="sidenav-dsplay"><span class="sidenav-line"></span>
             <img src="/assets/logo/Scroll Group 3.png" class="sidenav-icon">
-            Skills</span> 
+            Projects</span> 
         </button>
     </li>
     <li class="sidenav-item sidenav-item">
-        <button class="sidenav-link sidenav-link " [ngClass]="routeUrl === '/k' ? 'active': ''" (click)="navigateTo('k')">
+        <button class="sidenav-link sidenav-link " [ngClass]="routeUrl === '/hobbies' ? 'active': ''" (click)="navigateTo('hobbies')">
         <span class="sidenav-dsplay"><span class="sidenav-line"></span>
             <img src="/assets/logo/Scroll Group 3.png" class="sidenav-icon">
-            Skills</span> 
+            Hobbies</span> 
         </button>
     </li>
     </ul>      
